# vader-sentimental

./: CHANGELOG.md  Cargo.toml  README.md  typos.toml
benches/: compare.rs  sentimental.rs  vader_sentiment_comparison.rs
examples/: demo.rs
src/: lib.rs  main.rs  parsed_text.rs  sentiment_intensity_analyzer.rs  static_resources.rs  tests.rs  util.rs
tests/: polarity_snapshots.rs  tests_original.rs
tests/snapshots/: polarity_snapshots__negative-10.snap  polarity_snapshots__negative-11.snap  polarity_snapshots__negative-12.snap  polarity_snapshots__negative-13.snap  polarity_snapshots__negative-2.snap  polarity_snapshots__negative-3.snap  polarity_snapshots__negative-4.snap  polarity_snapshots__negative-5.snap  polarity_snapshots__negative-6.snap  polarity_snapshots__negative-7.snap  polarity_snapshots__negative-8.snap  polarity_snapshots__negative-9.snap  polarity_snapshots__negative.snap  polarity_snapshots__positive-10.snap  polarity_snapshots__positive-11.snap  polarity_snapshots__positive-12.snap  polarity_snapshots__positive-13.snap  polarity_snapshots__positive-14.snap  polarity_snapshots__positive-15.snap  polarity_snapshots__positive-16.snap  polarity_snapshots__positive-2.snap  polarity_snapshots__positive-3.snap  polarity_snapshots__positive-4.snap  polarity_snapshots__positive-5.snap  polarity_snapshots__positive-6.snap  polarity_snapshots__positive-7.snap  polarity_snapshots__positive-8.snap  polarity_snapshots__positive-9.snap  polarity_snapshots__positive.snap
