[package]
name = "vader-sentimental"
version = "0.1.1"
authors = [
  "Chris <chriswong21@berkeley.edu>",
  "Mariana Meireles <mariana@psychonautgirl.space>",
]
license = "MIT"
description = "Bindings for Rust from the original Python VaderSentiment analysis tool."
repository = "https://github.com/ckw017/vader-sentiment-rust"
documentation = "https://docs.rs/vader_sentiment"
edition = "2021"

[dependencies]
regex = "1.3.1"
maplit = "1.0.2"
lazy_static = "1.4.0"
unicase = "2.6.0"
clap = { version = "4.5.21", features = ["derive"] }

[dev-dependencies]
insta = "1.41.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
vader_sentiment = { version = "0.1.1" }

[[bench]]
name = "vader_sentiment_comparison"
harness = false
